# thetadata-api

./: .gitignore  README.md  pyproject.toml  setup.py
thetadata_api/: LICENSE  __init__.py  bulk.py  calendar_utils.py  client.py  corrector.py  models.py  pipeline.py  realtime.py  utils.py
thetadata_api/examples/: bulk_options.py  bulk_spot.py  download_spx_clean.py  realtime_feed.py
